[package]
name = "rust-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# For Unix system calls (signals, process groups, etc.)
nix = { version = "0.27", features = ["process", "signal", "term"] }

# For safe signal handling via atomic flags
signal-hook = "0.3"

# For fine-grained control over SIGTTOU
libc = "0.2"
termios = "0.3"

# For getting terminal size
terminal_size = "0.3"
