[package]
name = "toomuch"
version = "0.0.2"
edition = "2021"
authors = ["Cao Tan Duc <ductancao.work@gmail.com>"]
license = "MIT"
description = "A GNU timeout-compatible command wrapper with interactive suspend/resume support"
repository = "https://github.com/caotanduc/toomuch"
homepage = "https://github.com/caotanduc/toomuch"
documentation = "https://docs.rs/toomuch"
readme = "README.md"
keywords = ["cli", "timeout", "process", "terminal", "unix"]
categories = ["command-line-utilities", "os::unix-apis"]
exclude = ["target/", ".github/"]


[dependencies]
nix = { version = "0.27", features = ["process", "signal", "term"] }
signal-hook = "0.3"
libc = "0.2"
termios = "0.3"
terminal_size = "0.3"

[[bin]]
name = "toomuch"
path = "src/bin/toomuch.rs"

[package.metadata.docs.rs]
all-features = true
